plugins {
    id 'java'
}

group 'xyz.andornot'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
    implementation 'io.quarkus:quarkus-reactive-pg-client'
    implementation 'net.datafaker:datafaker'
    implementation 'io.quarkus:quarkus-hibernate-orm-panache'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}